--- a/config/jp_local_config.json
+++ b/config/jp_local_config.json
@@ -1,7 +1,7 @@
 {
   "Type":"JP",
   "Datadir": "/data/db/jp",
-  "Proxypasswd": "smart:jinhan@",
+  "Proxypasswd": "smart:smart2016@",
   "Proxymaxtrytimes": 88,
   "Rank":500000,
   "Listtasknum": 30,
@@ -31,7 +31,7 @@
   "Spiderloglevel": "INFO",
   "Redisconfig": {
     "Host": "127.0.0.1:6379",
-    "Password": "jinhan",
+    "Password": "smart2016",
     "DB": 0
   },
   "Redispoolsize":100,
@@ -39,14 +39,14 @@
     "Ip": "127.0.0.1",
     "Port": "3306",
     "Username": "root",
-    "Password": "jinhan",
+    "Password": "smart2016",
     "Dbname": "jp_smart_base"
   },
   "Hashdb": {
     "Ip": "127.0.0.1",
     "Port": "3306",
     "Username": "root",
-    "Password": "jinhan",
+    "Password": "smart2016",
     "Dbname": "jp_smart_hash"
   },
   "Hashnum":500,
@@ -54,25 +54,25 @@
     "Ip": "127.0.0.1",
     "Port": "3306",
     "Username": "root",
-    "Password": "jinhan",
+    "Password": "smart2016",
     "Dbname": "jp_smartdb"
   },
   "Ipuse": {
     "d": {
       "Port": "808",
-      "Secret": "smart:jinhan"
+      "Secret": "smart:smart2016"
     },
     "e": {
       "Port": "808",
-      "Secret": "smart:jinhan"
+      "Secret": "smart:smart2016"
     },
     "f": {
       "Port": "808",
-      "Secret": "smart:jinhan"
+      "Secret": "smart:smart2016"
     },
     "h": {
       "Port": "808",
-      "Secret": "smart:jinhan"
+      "Secret": "smart:smart2016"
     }
   },
   "Ips": {
